# steam-summarizer

./: README.md  fetch_steam_games.py  fetch_steam_summaries.py  main.py  pyproject.toml  steam_api.py
data/: steam_db.sqlite
